--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 input {
     border: 0;
+    height: 50px;
 }
 
 #new-surname , #new-age{
     border-top: 1px solid black;
+}
+
+input:focus-visible{
+    outline: 0;
 }
